[gd_scene load_steps=2 format=3 uid="uid://bmctjgvthy81d"]

[ext_resource type="Script" path="res://scenes/TitleScreen.gd" id="1_3d7ge"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3d7ge")

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -504.0
offset_right = 443.0
offset_bottom = -384.0
grow_vertical = 0
text = "Start Game"

[node name="OptionsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -336.0
offset_right = 443.0
offset_bottom = -216.0
grow_vertical = 0
text = "Options"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 904.0
offset_right = 443.0
offset_bottom = 1024.0
text = "Quit"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
